--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,27 +1,4 @@
 <!-- popis članaka -->
 <h1>Edit article</h1>
-<% if @article.errors.any? %>
-  <h2>The following errors prevented article from being saved: </h2>
-  <ul>
-    <% @article.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-  </ul>
-<% end %>
-<%= form_with(model: @article, local: true) do |f| %>
-  <!-- naslov članka -->
-  <p>
-    <%=f.label :title %><br>
-    <%= f.text_field :title %>
-  </p>
-  <br>
-  <!-- opis članka -->
-  <p>
-    <%=f.label :description %><br>
-    <%= f.text_area :description %>
-  </p>
-  <!-- tipka za submitanje -->
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
+<%= render 'form' %>
+<%= link_to 'Cancel edit and return to articles listing', articles_path %>
