--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,7 +4,7 @@
     <tr>
       <th>Title</th>
       <th>Description</th>
-      <th>Actions</th>
+      <th colspan="3">Actions</th>
     </tr>
   </thead>
   <tbody>
@@ -14,9 +14,12 @@
         <td><%= article.description %></td>
         <td><%= link_to 'Show', article_path(article.id) %></td>
         <td><%= link_to 'Edit', edit_article_path(article.id) %></td>
-        <td><%= link_to 'Delete', article_path(article.id), method: :delete %></td>
+        <td><%= link_to 'Delete', article_path(article.id), method: :delete, data: { confirm: "Are you sure?"} %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-<%= link_to 'Create new article', new_article_path %>
+<p>
+  <%= link_to 'Create new article', new_article_path %>
+  <%= link_to 'Home page', root_path %>
+</p>
