--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,3 @@
 <h1>This is About page of Alpha Blog v3 </h1>
+<%= link_to 'Articles listing', articles_path %>
+<%= link_to 'Home page', root_path %>
