--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,5 @@
 <!-- popis članaka -->
-<h1>Edit article</h1>
-<%= render 'form' %>
-<%= link_to 'Cancel edit and return to articles listing', articles_path %>
+<div id="page-content">
+  <h1 class="text-center mt-4"> Edit article</h1>
+  <%= render 'form' %>
+</div>
