--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,5 @@
 <!-- popis članaka -->
-<h1>Create a new article</h1>
-<%= render 'form' %>
-<%= link_to 'Returnt to articles listing', articles_path %>
+<div id="page-content">
+  <h1 class="text-center mt-4"> Create new article</h1>
+  <%= render 'form' %>
+</div>
