--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,16 +11,19 @@
             <%= link_to user.username, user_path(user) %>
           </div>
           <div class="card-body">
-            <h5 class="card-title">
-              <%= link_to gravatar_for(user, size: 150), user_path(user) %></h5>
+            <h5 class="card-title"><%= link_to gravatar_for(user, size: 150), user_path(user) %></h5>
             <p class="card-text"><%= pluralize(user.articles.count, "article") %></p>
-            <% if logged_in? && user == current_user %>
               <%= link_to 'View profile', user_path(user), class: "btn btn-outline-success" %>
-              <%= link_to 'Edit profile', edit_user_path(user), class: "btn btn-outline-info" %>
-            <% end %>
+                <% if logged_in? %>
+                  <% if user == current_user%>  
+                    <%= link_to 'Edit profile', edit_user_path(user), class: "btn btn-outline-info" %>
+                  <% end %>
+                  <% if current_user.admin? %>
+                    <%= link_to "Delete user", user_path(user), class: "btn btn-outline-danger", method: :delete, data: {confirm: "Are you sure you want to delete user and all associated articles?" } %>
+                  <% end %>
+                <% end %>
             <div class="card-footer text-muted">
-              <small> Joined <%= time_ago_in_words(user.created_at) %> ago
-              </small>
+              <small> Joined <%= time_ago_in_words(user.created_at) %> ago</small>
             </div>
           </div>
         </div>
