--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,6 +6,9 @@
         <div class="card-header font-italic">
           created by <%= @article.user.username %>
           <%= link_to gravatar_for(@article.user), user_path(@article.user) %>
+          <% if @article.categories.any? %>
+              <div class="mt-2"><%= render @article.categories %></div> 
+            <% end %>
         </div>
         <div class="card-body">
           <div class="card-text text-left"><%= simple_format(@article.description) %></div>
@@ -13,7 +16,7 @@
             <%= link_to 'Edit', edit_article_path(@article.id), class: "btn btn-outline-info" %>
             <%= link_to 'Delete', article_path(@article.id), method: :delete, data: { confirm: "Are you sure?"}, class:"btn btn-outline-danger" %>
             <% end %>
-          <div class="card-footer text-muted">
+           <div class="card-footer text-muted">
             <small> Created <%= time_ago_in_words(@article.created_at) %> ago,
               edited <%= time_ago_in_words(@article.updated_at) %> ago </small>
           </div>
