--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Categories</h1>
 
-<h1 class="text-center mt-4">Listing all articles</h1>
+
+<h1 class="text-center mt-4">Listing all categories</h1>
 <div class="flickr_pagination">
   <%= will_paginate @acategories, :container => false %>
 </div>
@@ -12,8 +12,9 @@
         <div class="card text-center shadow mb-5 bg-white rounded">
           <div class="card-body">
             <h5 class="card-title"><%= link_to category.name, category_path(category.id), class: "text-success" %></h5>
+             <p class="card-text"><%= pluralize(category.articles.count, "article") %></p>
           </div>
-
+          
             <div class="card-footer text-muted">
               <small> Created <%= time_ago_in_words(category.created_at) %> ago,
                 edited <%= time_ago_in_words(category.updated_at) %> ago </small>
